-AndroidManifest min max sdk added -Shadow removed from contacts -parse jar added -gitignore modified

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_about">About</string>
     <string name="action_refresh">Update</string>
     <string name="Search">Search</string>
+    <string name="name">Name</string>
+    <string name="phone_no">Phone Number</string>
 </resources>
