--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="action_about">About</string>
     <string name="action_refresh">Update</string>
+    <string name="action_add_all">Add To Contacts</string>
     <string name="Search">Search</string>
     <string name="name">Name</string>
     <string name="phone_no">Phone Number</string>
